plugins {
    id 'java'
    id 'org.springframework.boot' version '2.6.6'
    id 'io.spring.dependency-management' version '1.1.4'
    id "io.gatling.gradle" version "3.9.5"
}

group = 'com.exercise.boot'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}
sourceSets {
    gatling {
        java {
            srcDir 'src/gatling/java'
        }
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Swagger OPEN API Dependency
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // Cucumber
    testImplementation 'io.cucumber:cucumber-java:7.2.3'
    testImplementation 'io.cucumber:cucumber-spring:7.2.3'
    testImplementation 'io.cucumber:cucumber-junit:7.2.3'

    // Gatling
    testImplementation 'io.gatling.highcharts:gatling-charts-highcharts:3.9.5'
    testImplementation 'io.gatling:gatling-app:3.9.5'
    testImplementation 'io.gatling:gatling-recorder:3.9.5'
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    useJUnit {
        include '**/*Runner*'
    }
    testLogging {
        events "passed", "skipped", "failed"
    }
}
